k8s/xue-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xue-test
spec:
  type: ClusterIP
  selector:
    app: xue-test
  ports:
    - port: 8080
      targetPort: 8080
